--- a/views/blocks.phtml
+++ b/views/blocks.phtml
@@ -101,7 +101,7 @@
 													<span class="sr-only">Toggle Dropdown</span>
 											  </button>
                         <ul class="dropdown-menu">
-                          <li><a href="https://www.blockchain.com/btc/block/<?= $block["hash"] ?>" target="_blank"><i class="fa fa-globe fa-lg" style="color:lightblue"></i> Blockchain.com</a></li>
+                          <li><a href="https://http://explorer.redblockcoin.com/block/<?= $block["hash"] ?>" target="_blank"><i class="fa fa-globe fa-lg" style="color:lightblue"></i> explorer.redblockcoin.com</a></li>
                           <li><a href="https://live.blockcypher.com/btc/block/<?= $block["hash"] ?>" target="_blank"><i class="fa fa-globe fa-lg" style="color:lightblue"></i> BlockCypher</a></li>
                           <li><a href="https://blockchair.com/bitcoin/block/<?= $block["hash"] ?>" target="_blank"><i class="fa fa-globe fa-lg" style="color:lightblue"></i> Blockchair</a></li>
                         </ul>
