--- a/views/main.phtml
+++ b/views/main.phtml
@@ -215,7 +215,7 @@
 
 					<li><a class="close-link"><i class="fa fa-close"></i></a></li>
           <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
-					<li><a><i class="fa fa-question-circle-o" data-toggle="tooltip" data-html="true" data-placement="left" title="BNM will only check the country/isp for peers that are older than 5 minutes."></i></a></li>
+					<li><a><i class="fa fa-question-circle-o" data-toggle="tooltip" data-html="true" data-placement="left" title="REDBwill only check the country/isp for peers that are older than 5 minutes."></i></a></li>
           <?php if(isset($content['api'])) { ?><li><a><i class="fa fa-refresh" data-toggle="tooltip" data-html="true" data-placement="left" title="<?= $content["api"]["callc"] ?> call(s) to API with <?= $content["api"]["ipc"] ?> new ip(s)."></i></a></li><?php }?>
 
 				  </ul>
